# savitar-monitor

./: .gitignore  .gitmodules  CHANGELOG  LICENSE  README.md  build.md  initenv.sh  start_doxygen_web.sh
monitor/: CMakeLists.txt  Doxyfile
monitor/agent/: CMakeLists.txt  config.h  data_processor_file.cpp  data_processor_file.h  data_processor_inf.h  main.cpp  mon_agent  mon_agent.cpp  mon_agent.h  mon_agent.pid
monitor/api/: .exrc  layout_access.h  monitor_api.cpp  monitor_api.h
monitor/common/: define.h
monitor/doc/: api.md  example_data.json
monitor/etc/: agent.conf  log.conf
monitor/test/: CMakeLists.txt
monitor/test/curl/: CMakeLists.txt  test_curl.cpp
monitor/test/monitor_api/: CMakeLists.txt  layoutaccess.cpp  monitor_api.cpp
monitor/test/rapidjson/: CMakeLists.txt  test_json2.cpp  test_rapidjson.cpp
monitor/test/util/: CMakeLists.txt
monitor/test/util/shm/: CMakeLists.txt  test_shm.cpp
monitor/test/util/util_str/: CMakeLists.txt  util_str.cpp
monitor/test/util/util_time/: CMakeLists.txt  util_time.cpp
monitor/util/: CMakeLists.txt  log.cpp  log.h  shm.cpp  shm.h  util_daemon.h  util_net.cpp  util_net.h  util_str.h  util_time.h
tools/: README.md  me  mk  smk
